--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,17 @@ jobs:
   test:
     name: Basic Tests
     runs-on: ubuntu-latest
-    
+    services:
+      mongo:
+        image: mongo:latest
+        ports:
+          - 27017:27017
+        options: >-
+          --health-cmd "mongosh --eval 'db.adminCommand(\'ping\')'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -27,6 +37,43 @@ jobs:
       run: |
         echo "Validating frontend code..." 
         echo "✅ Frontend validation passed!"
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Install backend dependencies
+      run: npm ci
+      working-directory: ./server
+
+    - name: Seed test user for Cypress
+      run: |
+        npm install bcryptjs
+        node scripts/seedTestUser.js
+      working-directory: ./server
+      env:
+        MONGODB_URI: mongodb://localhost:27017/studyblocks
+
+    - name: Build
+      run: npm run build
+
+    - name: Start React app
+      run: npm start &
+      env:
+        CI: true
+
+    - name: Wait for app to be ready
+      run: npx wait-on http://localhost:3000
+
+    - name: Run Cypress E2E tests
+      run: npm run cypress:run
+      env:
+        CYPRESS_baseUrl: http://localhost:3000
+
+    - name: Run backend tests
+      run: npm test --prefix server
+      env:
+        RAZORPAY_KEY: dummykey
+        RAZORPAY_SECRET: dummysecret
 
     - name: Backend validation
       run: |
