--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
     "url": "https://github.com/thepranaygupta/react-tailwind-css-starter-pack/issues"
   },
   "scripts": {
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -63,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "cypress": "^14.4.0",
     "tailwindcss": "^3.2.7"
   }
 }
