--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "dotenv -e .env.test -- cross-env NODE_ENV=test jest --runInBand",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
@@ -27,5 +28,11 @@
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.8.6"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "dotenv-cli": "^8.0.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.1"
   }
 }
