--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,9 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Create .env for frontend
+      run: echo 'REACT_APP_BACKEND_URL=http://localhost:4000/api/v1' > .env
+
     - name: Install backend dependencies
       run: npm ci
       working-directory: ./server
@@ -56,13 +59,19 @@ jobs:
     - name: Build
       run: npm run build
 
+    - name: Start backend server
+      run: npm start &
+      working-directory: ./server
+      env:
+        MONGODB_URI: mongodb://localhost:27017/studyblocks
+
     - name: Start React app
       run: npm start &
       env:
         CI: true
 
-    - name: Wait for app to be ready
-      run: npx wait-on http://localhost:3000
+    - name: Wait for app and backend to be ready
+      run: npx wait-on http://localhost:3000 http://localhost:4000
 
     - name: Run Cypress E2E tests
       run: npm run cypress:run
