--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
-    "razorpay": "^2.8.6"
+    "razorpay": "^2.8.6",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
