--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-prom-bundle": "^8.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
     "otp-generator": "^4.0.1",
+    "prom-client": "^15.1.3",
     "razorpay": "^2.8.6",
     "winston": "^3.17.0"
   },
