--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,12 +15,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
+        continue-on-error: true
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push backend Docker image
         uses: docker/build-push-action@v5
+        continue-on-error: true
         with:
           context: ./server
           file: ./server/Dockerfile
@@ -37,12 +39,14 @@ jobs:
         uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
+        continue-on-error: true
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build and push frontend Docker image
         uses: docker/build-push-action@v5
+        continue-on-error: true
         with:
           context: .
           file: ./Dockerfile
