--- a/server/package.json
+++ b/server/package.json
@@ -15,15 +15,16 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.36.4",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.5.1",
     "express-prom-bundle": "^8.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "multer": "^2.0.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
